[package]
name = "mates"
version = "0.1.0"
authors = ["Ace Eldeib <alexeldeib@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.31"
bincode = "^1.2.1"
serde = { version = "1.0", features = ["derive"] }
rand = "^0.7.3"
